--- a/DoctorsOffice/Web.config
+++ b/DoctorsOffice/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="resizer" type="ImageResizer.ResizerSection,ImageResizer" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DoctorsOfficeIdentity;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -25,6 +26,7 @@
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <add name="ImageResizingModule" type="ImageResizer.InterceptModule"/>
     </modules>
   </system.webServer>
   <runtime>
