--- a/DoctorsOffice/Web.config
+++ b/DoctorsOffice/Web.config
@@ -21,7 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="51200" enable = "true" executionTimeout="45" />
   </system.web>
   <system.webServer>
     <modules>
