PatientsExaminations all done, PatientController finished

--- a/DoctorsOffice/DoctorsOffice.csproj
+++ b/DoctorsOffice/DoctorsOffice.csproj
@@ -329,6 +329,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Doctors\Examinations.cshtml" />
+    <Content Include="Views\Patients\ExaminationList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
