--- a/DoctorsOffice/packages.config
+++ b/DoctorsOffice/packages.config
@@ -16,14 +16,14 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Facebook" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Google" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Google" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
@@ -31,5 +31,11 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
+  <package id="Sendgrid" version="9.12.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
