PrivateSettings file added for private keys, gitignore change to contain this file

--- a/DoctorsOffice/Web.config
+++ b/DoctorsOffice/Web.config
@@ -12,12 +12,11 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DoctorsOfficeIdentity;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="PrivateSettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SendGridApiKey" value="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" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
