Roles established and default admin user created

--- a/DoctorsOffice/PrivateSettings.config
+++ b/DoctorsOffice/PrivateSettings.config
@@ -7,5 +7,7 @@
     <add key ="FacebookClientSecret" value="4b7f78477b7313083a06265e0d0e20bb" />
     <add key ="GoogleClientId" value="871473669581-6asq77n4ih9lbqsmvsd0va9mgqc3utu3.apps.googleusercontent.com" />
     <add key ="GoogleClientSecret" value="eZGtVW7AQEnzBmbI7075D1oh" />
+    <add key ="AdminUserName" value="admin@admin.com" />
+    <add key ="AdminPassword" value="Admin#1" />
   </appSettings>
 
