--- a/DoctorsOffice/packages.config
+++ b/DoctorsOffice/packages.config
@@ -9,10 +9,10 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
@@ -32,10 +32,15 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Sendgrid" version="9.12.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="Unity" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Mvc5" version="1.4.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
